--- a/agora-angular/src/app/order-management/order-management.component.html
+++ b/agora-angular/src/app/order-management/order-management.component.html
@@ -1,25 +1,68 @@
 <div class="container shadow rounded p-3 mb-5">
-    <h2 class="text-center">Bejövő rendelések</h2>
-    <div *ngIf="orders[0] != undefined">
-        <div *ngFor="let order of orders">
-            <collapse-panel [title]="'Rendelés #' + order.cartId">
-                <div *ngFor="let product of order.products" class="border-bottom">
-                    <div class="row p-2 pb-0 mt-2">
-                        <div class="col-auto mb-3">
-                            <img src="{{product.imgUrl}}" alt="" class="img img-fluid rounded" style="max-height: 4rem;">
-                        </div>
-                        <div class="col-8 col-lg-6">
-                            <h5 [routerLink]="['/product-details', product.productId]" class="fw-bold">{{product.name}}</h5>
-                            <a [routerLink]="['/profile', product.sellerId]" class="text-decoration-none">{{product.sellerLastName}} {{product.sellerFirstName}}</a>
-                        </div>
-                        <div class="col-6 col-lg-2 mt-3">
-                            <p>{{product.amount}} db</p>
-                        </div>
-                        <div class="col-6 col-lg-2 mt-3">
-                            <h4 class="fw-bold">{{product.price|price}}</h4>
-                        </div>
-                    </div>
-                    <!-- <div class="row mb-3 mt-0 pt-0">
+  <h2 class="text-center">Bejövő rendelések</h2>
+  <div *ngIf="orders[0] != undefined">
+    <div *ngFor="let order of orders" class="shadow rounded p-3 m-2">
+      <h3 class="fw-bold">Rendelés #{{ order.cartId }} ({{ order.address.userLastName }} {{ order.address.userFirstName }})</h3>
+      <hr>
+      <div class="row">
+        <div class="col-12 col-md-5 p-2 m-2 mb-0">
+          <h4 class="fw-bold">Rendelés kezelése</h4>
+          <div>
+            <label class="form-label mb-1" for="status">Feldolgozási állapot</label>
+            <select class="form-select" id="status">
+              <option value="">Rendelés fogadva</option>
+              <option value="">Összekészítés alatt</option>
+              <option value="">Szállítás folyamatban</option>
+            </select>
+          </div>
+          <div class="m-2">
+            <a href="" class="text-decoration-none">
+              <fa-icon [icon]="faTrash"></fa-icon> Rendelés visszautasítása
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-md-5 p-2 m-2 mb-0">
+          <h4 class="fw-bold">Szállítási cím</h4>
+          <div class="m-2 my-3 p-2 px-3 border address">
+            <span>{{order.address.userLastName}} {{order.address.userFirstName}}</span>
+            <br>
+            <div class="large m-0 p-0">
+              <span>{{order.address.city}}</span>
+              <br>
+              <span>{{order.address.streetAddress}}</span>
+            </div>
+            <span>{{order.address.postalCode}} </span>
+          </div>
+        </div>
+      </div>
+
+      <collapse-panel [panelOpen]="true" [title]="'Termékek'" class="mx-2">
+        <div *ngFor="let product of order.products" class="border-bottom">
+          <div class="row p-2 pb-0 mt-2">
+            <div class="col-auto mb-3">
+              <img src="{{product.imgUrl}}" alt="" class="img img-fluid rounded" style="max-height: 4rem;">
+            </div>
+            <div class="col-8 col-lg-4">
+              <h5 [routerLink]="['/product-details', product.productId]" class="fw-bold">{{product.name}}</h5>
+              <a [routerLink]="['/profile', product.sellerId]" class="text-decoration-none">{{product.sellerLastName}}
+                {{product.sellerFirstName}}</a>
+            </div>
+            <div class="col-6 col-lg-2 mt-3">
+              <p>{{product.amount}} db</p>
+            </div>
+            <div class="col-6 col-lg-2 mt-3">
+              <h4 class="fw-bold">{{product.price|price}}</h4>
+            </div>
+            <div class="col-6 col-lg-2 mt-3">
+              <select class="form-select">
+                <option value="">Rendelés fogadva</option>
+                <option value="">Összekészítés alatt</option>
+                <option value="">Szállítás folyamatban</option>
+                <option value="">Termék nem elérhető</option>
+              </select>
+            </div>
+          </div>
+          <!-- <div class="row mb-3 mt-0 pt-0">
                         <div class="d-flex justify-content-end">
                             <div class="me-3">
                                 <a href="" class="text-decoration-none me-3">
@@ -33,14 +76,17 @@
                             </div>
                         </div>
                     </div> -->
-                </div>
-            </collapse-panel>
         </div>
+      </collapse-panel>
+      <!-- </collapse-panel> -->
     </div>
-    <div *ngIf="orders[0] == undefined" class="text-center mt-4 pt-4">
-        <h1><fa-icon [icon]="faShoppingCart"></fa-icon></h1>
-        <h2>A kosarad üres</h2>
-        <p>csak arra vár, hogy vásárolni kezdj</p>
-    </div>
+  </div>
+  <div *ngIf="orders[0] == undefined" class="text-center mt-4 pt-4">
+    <h1>
+      <fa-icon [icon]="faShoppingCart"></fa-icon>
+    </h1>
+    <h2>A kosarad üres</h2>
+    <p>csak arra vár, hogy vásárolni kezdj</p>
+  </div>
 </div>
 <page-footer></page-footer>
