--- a/agora-angular/src/app/order-management/order-management.component.html
+++ b/agora-angular/src/app/order-management/order-management.component.html
@@ -7,7 +7,7 @@
           <h3 class="fw-bold mb-0">Rendelés #{{ order.cartId }} ({{ order.address.userLastName }} {{
             order.address.userFirstName }})</h3>
           <h4 (click)="enableEdit(i)" [ngClass]="{'text-primary':!fieldSetDisabled[i]}" class="mb-0 btn-edit">
-              <fa-icon [icon]="faEdit"></fa-icon>
+            <fa-icon [icon]="faEdit"></fa-icon>
           </h4>
         </div>
         <hr>
@@ -16,7 +16,7 @@
             <h4 class="fw-bold">Rendelés kezelése</h4>
             <div class="mb-3">
               <label class="form-label mb-1" for="status">Feldolgozási állapot</label>
-              <select class="form-select" id="status" [(ngModel)]="orderStatus[i]">
+              <select class="form-select" id="status" (change)="orderStatusChange(i)" [(ngModel)]="orders[i].status">
                 <option *ngFor="let status of statuses" [ngValue]="status.value">{{status.name}}</option>
               </select>
             </div>
@@ -25,7 +25,7 @@
               <h5 class="m-2 mt-0 fw-bold"> {{order.sumPrice|price}}</h5>
             </div>
             <div>
-              <a href="" class="m-0 p-0 btn text-primary text-decoration-none">
+              <a href="" (click)="$event.preventDefault(); deleteModalOpen = true; selectedOrderId = i" class="m-0 p-0 btn text-primary text-decoration-none">
                 <fa-icon [icon]="faTrash"></fa-icon> Rendelés visszautasítása
               </a>
             </div>
@@ -62,7 +62,7 @@
                 <h4 class="fw-bold">{{product.price|price}}</h4>
               </div>
               <div class="col-6 col-lg-3 mt-3 mb-2">
-                <select class="form-select" id="status" [(ngModel)]="orderProductStatus[i]">
+                <select class="form-select" id="status" (change)="productStatusChange(i,j)" [(ngModel)]="orders[i].products[j].status">
                   <option *ngFor="let status of statuses" [ngValue]="status.value">{{status.name}}</option>
                 </select>
                 <!-- <select class="form-select">
@@ -93,3 +93,15 @@
   </div>
 </div>
 <page-footer></page-footer>
+<modal-window [(modalVisible)]="deleteModalOpen" [title]="'Figyelmeztetés'">
+  <div class="warning">
+      <div class="text-center p-3 border-top mt-2">
+          <p class="large">Biztosan vissza szeretné utasítani ezt a rendelést?</p>
+          <p class="mb-0 pb-0">Ha a rendelésben szereplő egyetlen termék sem elérhető, az megszűnik. Ezt a műveletet nem lehet visszavonni.</p>
+      </div>
+      <div class="d-flex justify-content-between border-top pt-2">
+          <a href="" (click)="back($event)" class="btn btn-secondary me-1">Mégse</a>
+          <a href="" (click)="rejectOrder($event, selectedOrderId)" class="btn btn-danger mx-1">Törlés</a>
+      </div>
+  </div>
+</modal-window>
