--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -45,6 +45,7 @@
                             </li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']" [queryParams]="{tab: 1}">Profil</a></li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']" [queryParams]="{tab: 2}">Kívánság lista</a></li>
+                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-management']">Rendelés követés</a></li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-management']">Bejövő rendelések</a></li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" href="#">Beállítások</a></li>
                             <li>
