--- a/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.scss
+++ b/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.scss
@@ -29,4 +29,27 @@
     vertical-align: middle;
     height: 2.5rem;
     z-index: 5;
-}   
+}
+input.ng-invalid{
+    border-bottom: red thin solid;
+    // background-color: #ff8b95a6;
+}
+input.ng-untouched{
+    border-color: lightgray;
+}
+input.ng-valid{
+    border-bottom: #859C62 thin solid;
+}
+textarea.ng-untouched{
+    border-color: lightgray;
+}
+textarea.ng-valid{
+    border-bottom: #859C62 thin solid;
+}
+.form-control:focus {   
+    color: #212529;
+    background-color: #fff;
+    border-color: #859C62;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem #859c625b;
+}
