--- a/agora-angular/src/app/settings/profile-settings/profile-settings.component.html
+++ b/agora-angular/src/app/settings/profile-settings/profile-settings.component.html
@@ -1,4 +1,4 @@
-<div class="container shadow rounded p-3 col-md-11 col-lg-9">
+<div class="container shadow rounded p-3 col-md-11 col-lg-9 mb-4">
   <h2 class="text-center">Profil beállítások</h2>
   <div class="p-3">
     <h3 class="border-bottom pb-1">Publikus információk szerkesztése</h3>
@@ -19,9 +19,9 @@
           <input type="email" class="form-control" id="email" name="email" formControlName="email">
         </div>
       </div>
-      <a href="/" class="btn btn-primary my-2 px-2">
-        <fa-icon [icon]="faSave"></fa-icon>
-        <fa-icon [icon]="faSpinner"></fa-icon>
+      <a href="/" (click)="saveContact($event)" class="btn btn-primary my-2 px-2">
+        <fa-icon *ngIf="!contactLoading" [icon]="faSave"></fa-icon>
+        <fa-icon *ngIf="contactLoading" [icon]="faSpinner" [spin]="contactLoading"></fa-icon>
         Mentés
       </a>
     </form>
@@ -32,13 +32,12 @@
       <div class="row">
         <div class="mb-3 col-12 col-md-6">
           <label for="passwordEmail">Email</label>
-          <input type="email" class="form-control" id="passwordEmail" name="passwordEmail"
-            formControlName="passwordEmail">
+          <input type="email" class="form-control" id="passwordEmail" name="passwordEmail" formControlName="passwordEmail">
         </div>
       </div>
       <div class="row">
         <div class="mb-3 col-12 col-md-6">
-          <label for="password">Jelszó</label>
+          <label for="password">Jelenlegi jelszó</label>
           <input type="password" class="form-control" id="password" name="password" formControlName="password">
         </div>
       </div>
@@ -48,9 +47,9 @@
           <input type="password" class="form-control" id="newPassword" name="newPassword" formControlName="newPassword">
         </div>
       </div>
-      <a href="/" class="btn btn-primary my-2 px-2">
-        <fa-icon [icon]="faSave"></fa-icon>
-        <fa-icon [icon]="faSpinner"></fa-icon>
+      <a href="/" (click)="savePassword($event)" class="btn btn-primary my-2 px-2">
+        <fa-icon *ngIf="!passwordLoading" [icon]="faSave"></fa-icon>
+        <fa-icon *ngIf="passwordLoading" [icon]="faSpinner" [spin]="passwordLoading"></fa-icon>
         Mentés
       </a>
     </form>
