--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -45,7 +45,7 @@
                             </li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']" [queryParams]="{tab: 1}">Profil</a></li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']" [queryParams]="{tab: 2}">Kívánság lista</a></li>
-                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-management']">Rendelés követés</a></li>
+                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-tracking']">Rendelés követés</a></li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-management']">Bejövő rendelések</a></li>
                             <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/settings']" href="#">Beállítások</a></li>
                             <li>
@@ -68,73 +68,17 @@
     <div @toggleMenu *ngSwitchCase="'category'">
         <div class="col-12 container pb-4">
             <div class="row">
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-produce">
+                <div *ngFor="let category of categories" class="col-6 col-md-3 col-lg-2 mb-3">
+                    <div [routerLink]="['/search']" [queryParams]="{category:category}" (click)="openView = ''" class="card card-category">
                         <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faCarrot"></fa-icon>
-                            <p class="card-text m-0">Zöldség</p>
+                            <fa-icon [icon]="[iconPrefix, (category|icon:'category')]"></fa-icon>
+                            <p class="card-text m-0">{{ category }}</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-produce">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faApple"></fa-icon>
-                            <p class="card-text m-0">Gyümölcs</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-produce">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faBread"></fa-icon>
-                            <p class="card-text m-0">Pékáru</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-produce">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faCheese"></fa-icon>
-                            <p class="card-text m-0">Tejtermék</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-produce">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faGlassMartiniAlt"></fa-icon>
-                            <p class="card-text m-0">Italok</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-product">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faGem"></fa-icon>
-                            <p class="card-text m-0">Ékszer</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-product">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faPalette"></fa-icon>
-                            <p class="card-text m-0">Művészet</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-product">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faTshirt"></fa-icon>
-                            <p class="card-text m-0">Divat</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <a [routerLink]="['/search']" class="text-decoration-none text-dark">
-                        <div class="card card-category-product">
+                <div [routerLink]="['/search']" (click)="openView = ''" class="col-6 col-md-3 col-lg-2 mb-3">
+                    <a class="text-decoration-none text-dark">
+                        <div class="card card-category">
                             <div class="hstack gap-2 card-body mx-auto">
                                 <fa-icon [icon]="faBoxes"></fa-icon>
                                 <p class="card-text m-0">Összes</p>
@@ -179,7 +123,6 @@
                 <div class="col-6 col-md-3 col-lg-2 mb-3">
                     <div class="card card-category-product">
                         <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="faTshirt"></fa-icon>
                             <p class="card-text m-0">Divat</p>
                         </div>
                     </div>
