--- a/agora-angular/src/app/nav/nav.component.scss
+++ b/agora-angular/src/app/nav/nav.component.scss
@@ -2,20 +2,18 @@
     color: #342A2B;
     font-family: 'IM Fell English', serif;
 }
-.card-category-produce{
-    background-color: #effce7;
-    border: none;
+.card-category{
+    cursor: pointer;
 }
-.card-category-product{
-    background-color: #fdf4e3;
-    border: none;
+.card-category:hover{
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem #859c625b;
 }
 .card-title{
     font-size: .9rem;
 }
 .selected{
     font-weight: bold;
-    background-color: #fdf4e3;
 }
 .nav-link-selectable{
     border-radius: 1rem;
