--- a/agora-angular/src/app/order-management/order-management.component.html
+++ b/agora-angular/src/app/order-management/order-management.component.html
@@ -1,107 +1,132 @@
-<div class="container shadow rounded p-3 mb-5">
-  <h2 class="text-center">Bejövő rendelések</h2>
-  <div *ngIf="orders[0] != undefined">
-    <div *ngFor="let order of orders; let i = index;" class="shadow rounded p-3 m-2">
-      <fieldset [disabled]="fieldSetDisabled[i]">
-        <div class="d-flex justify-content-between mx-2">
-          <h3 class="fw-bold mb-0">Rendelés #{{ order.cartId }} ({{ order.address.userLastName }} {{
-            order.address.userFirstName }})</h3>
-          <h4 (click)="enableEdit(i)" [ngClass]="{'text-primary':!fieldSetDisabled[i]}" class="mb-0 btn-edit">
-            <fa-icon [icon]="faEdit"></fa-icon>
-          </h4>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-12 col-md-5 p-2 m-2 mb-0">
-            <h4 class="fw-bold">Rendelés kezelése</h4>
-            <div class="mb-3">
-              <label class="form-label mb-1" for="status">Feldolgozási állapot</label>
-              <select class="form-select" id="status" (change)="orderStatusChange(i)" [(ngModel)]="orders[i].status">
-                <option *ngFor="let status of statuses" [ngValue]="status.value">{{status.name}}</option>
-              </select>
+<div class="page">
+  <div class="container shadow rounded p-3 mb-5">
+    <h2 class="text-center">Bejövő rendelések</h2>
+    <div *ngIf="orders[0] != undefined">
+      <div *ngFor="let order of orders; let i = index;">
+        <div *ngIf="order.products" class="shadow rounded p-3 m-2">
+          <fieldset [disabled]="fieldSetDisabled[i]">
+            <div class="d-flex justify-content-between mx-2">
+              <h3 class="fw-bold mb-0">Rendelés #{{ order.cartId }} ({{ order.address.userLastName }} {{
+                order.address.userFirstName }})</h3>
+              <h4 (click)="enableEdit(i)" [ngClass]="{'text-primary':!fieldSetDisabled[i]}" class="mb-0 btn-edit">
+                <fa-icon [icon]="faEdit"></fa-icon>
+              </h4>
             </div>
-            <div class="mb-3">
-              <label class="form-label mb-1">Értéke összesen</label>
-              <h5 class="m-2 mt-0 fw-bold"> {{order.sumPrice|price}}</h5>
+            <hr>
+            <div class="row">
+              <div class="col-12 col-md-4 p-2 m-2 mb-0">
+                <h4 class="fw-bold">Rendelés kezelése</h4>
+                <div class="mb-3">
+                  <label class="form-label mb-1" for="status">Feldolgozási állapot</label>
+                  <select class="form-select" id="status" (change)="orderStatusChange(i)"
+                    [(ngModel)]="orders[i].status">
+                    <option *ngFor="let status of statuses" [ngValue]="status.value">{{status.name}}</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label mb-1">Értéke összesen</label>
+                  <h5 class="m-2 mt-0 fw-bold"> {{order.sumPrice|price}}</h5>
+                </div>
+                <div>
+                  <a (click)="$event.preventDefault(); deleteModalOpen = true; selectedOrderId = i"
+                    class="m-0 p-0 btn text-primary text-decoration-none">
+                    <fa-icon [icon]="faTrash"></fa-icon> Rendelés visszautasítása
+                  </a>
+                </div>
+              </div>
+              <div class="col-12 col-md-auto p-2 m-2 mb-0">
+                <h4 class="fw-bold ms-2">Szállítási cím</h4>
+                <div class="m-2 my-3 p-2 px-3 border address">
+                  <span>{{order.address.userLastName}} {{order.address.userFirstName}}</span>
+                  <br>
+                  <div class="large m-0 p-0">
+                    <span>{{order.address.city}}</span>
+                    <br>
+                    <span>{{order.address.streetAddress}}</span>
+                  </div>
+                  <span>{{order.address.postalCode}} </span>
+                </div>
+              </div>
+              <div class="col-12 col-md-auto p-2 m-2 mb-0">
+                <h4 class="fw-bold ms-2">Elérehetőség</h4>
+                <div class="m-2 my-1 p-2">
+                  <div class="mb-2">
+                    <span class="fw-bold">Email: </span>
+                    <span class="large">{{order.address.email}}</span>
+                    <br>
+                    <span class="fw-bold">Telefon: </span>
+                    <span class="large">{{order.address.phone}}</span>
+                  </div>
+                  <a class="text-decoration-none">
+                    <fa-icon [icon]="faEnvelope"></fa-icon>
+                    Üzenet küldése
+                  </a>
+                </div>
+              </div>
             </div>
-            <div>
-              <a href="" (click)="$event.preventDefault(); deleteModalOpen = true; selectedOrderId = i" class="m-0 p-0 btn text-primary text-decoration-none">
-                <fa-icon [icon]="faTrash"></fa-icon> Rendelés visszautasítása
-              </a>
-            </div>
-          </div>
-          <div class="col-12 col-md-5 p-2 m-2 mb-0">
-            <h4 class="fw-bold">Szállítási cím</h4>
-            <div class="m-2 my-3 p-2 px-3 border address">
-              <span>{{order.address.userLastName}} {{order.address.userFirstName}}</span>
-              <br>
-              <div class="large m-0 p-0">
-                <span>{{order.address.city}}</span>
-                <br>
-                <span>{{order.address.streetAddress}}</span>
-              </div>
-              <span>{{order.address.postalCode}} </span>
-            </div>
-          </div>
-        </div>
-        <collapse-panel [panelOpen]="true" [title]="'Termékek'" class="mx-2">
-          <div *ngFor="let product of order.products; let j = index" class="border-bottom">
-            <div class="row p-2 pb-0 mt-2">
-              <div class="col-auto mb-3">
-                <img src="{{product.imgUrl}}" alt="" class="img img-fluid rounded" style="max-height: 4rem;">
-              </div>
-              <div class="col-8 col-lg-4">
-                <h5 [routerLink]="['/product-details', product.productId]" class="fw-bold">{{product.name}}</h5>
-                <a [routerLink]="['/profile', product.sellerId]" class="text-decoration-none">{{product.sellerLastName}}
-                  {{product.sellerFirstName}}</a>
-              </div>
-              <div class="col-6 col-lg-2 mt-3">
-                <p>{{product.amount}} db</p>
-              </div>
-              <div class="col-6 col-lg-2 mt-3">
-                <h4 class="fw-bold">{{product.price|price}}</h4>
-              </div>
-              <div class="col-6 col-lg-3 mt-3 mb-2">
-                <select class="form-select" id="status" (change)="productStatusChange(i,j)" [(ngModel)]="orders[i].products[j].status">
-                  <option *ngFor="let status of statuses" [ngValue]="status.value">{{status.name}}</option>
-                </select>
-                <!-- <select class="form-select">
+            <collapse-panel [panelOpen]="true" [title]="'Termékek'" class="mx-2">
+              <div *ngFor="let product of order.products; let j = index" class="border-bottom">
+                <div class="row p-2 pb-0 mt-2">
+                  <div class="col-auto mb-3">
+                    <img src="{{product.imgUrl}}" alt="" class="img img-fluid rounded" style="max-height: 4rem;">
+                  </div>
+                  <div class="col-8 col-lg-4">
+                    <h5 [routerLink]="['/product-details', product.productId]" class="fw-bold">{{product.name}}</h5>
+                    <a [routerLink]="['/profile', product.sellerId]"
+                      class="text-decoration-none">{{product.sellerLastName}}
+                      {{product.sellerFirstName}}</a>
+                  </div>
+                  <div class="col-6 col-lg-2 mt-3">
+                    <p>{{product.amount}} db</p>
+                  </div>
+                  <div class="col-6 col-lg-2 mt-3">
+                    <h4 class="fw-bold">{{product.price|price}}</h4>
+                  </div>
+                  <div class="col-6 col-lg-3 mt-3 mb-2">
+                    <select class="form-select" id="status" (change)="productStatusChange(i,j)"
+                      [(ngModel)]="orders[i].products[j].status">
+                      <option *ngFor="let status of statuses" [ngValue]="status.value">{{status.name}}</option>
+                    </select>
+                    <!-- <select class="form-select">
                   <option value="">Rendelés fogadva</option>
                   <option value="">Összekészítés alatt</option>
                   <option value="">Szállítás folyamatban</option>
                   <option value="">Termék nem elérhető</option>
                 </select> -->
+                  </div>
+                </div>
               </div>
+            </collapse-panel>
+            <div class="d-flex justify-content-end">
+              <a href="" class="btn btn-primary" (click)="save($event, i)">
+                <fa-icon [icon]="faSave"></fa-icon>
+                Mentés
+              </a>
             </div>
-          </div>
-        </collapse-panel>
-        <div class="d-flex justify-content-end">
-          <a href="" class="btn btn-primary" (click)="save($event, i)">
-            <fa-icon [icon]="faSave"></fa-icon>
-            Mentés
-          </a>
+          </fieldset>
         </div>
-      </fieldset>
+      </div>
     </div>
-  </div>
-  <div *ngIf="orders[0] == undefined" class="text-center mt-4 pt-4">
-    <h1>
-      <fa-icon [icon]="faTruck"></fa-icon>
-    </h1>
-    <h2>Egyetlen függőben lévő rendelésed sincs</h2>
-    <p>az új renedlések itt jelenennek majd meg</p>
+    <div *ngIf="orders[0] == undefined" class="text-center mt-4 pt-4">
+      <h1>
+        <fa-icon [icon]="faTruck"></fa-icon>
+      </h1>
+      <h2>Egyetlen függőben lévő rendelésed sincs</h2>
+      <p>az új renedlések itt jelenennek majd meg</p>
+    </div>
   </div>
 </div>
 <page-footer></page-footer>
 <modal-window [(modalVisible)]="deleteModalOpen" [title]="'Figyelmeztetés'">
   <div class="warning">
-      <div class="text-center p-3 border-top mt-2">
-          <p class="large">Biztosan vissza szeretné utasítani ezt a rendelést?</p>
-          <p class="mb-0 pb-0">Ha a rendelésben szereplő egyetlen termék sem elérhető, az megszűnik. Ezt a műveletet nem lehet visszavonni.</p>
-      </div>
-      <div class="d-flex justify-content-between border-top pt-2">
-          <a href="" (click)="back($event)" class="btn btn-secondary me-1">Mégse</a>
-          <a href="" (click)="rejectOrder($event, selectedOrderId)" class="btn btn-danger mx-1">Törlés</a>
-      </div>
+    <div class="text-center p-3 border-top mt-2">
+      <p class="large">Biztosan vissza szeretné utasítani ezt a rendelést?</p>
+      <p class="mb-0 pb-0">Ha a rendelésben szereplő egyetlen termék sem elérhető, az megszűnik. Ezt a műveletet nem
+        lehet visszavonni.</p>
+    </div>
+    <div class="d-flex justify-content-between border-top pt-2">
+      <a href="" (click)="back($event)" class="btn btn-secondary me-1">Mégse</a>
+      <a href="" (click)="rejectOrder($event, selectedOrderId)" class="btn btn-danger mx-1">Törlés</a>
+    </div>
   </div>
 </modal-window>
