--- a/agora-angular/src/app/settings/profile-settings/profile-settings.component.html
+++ b/agora-angular/src/app/settings/profile-settings/profile-settings.component.html
@@ -1,58 +1,60 @@
 <div class="container shadow rounded p-3 col-md-11 col-lg-9 mb-4">
   <h2 class="text-center">Profil beállítások</h2>
-  <div class="p-3">
+  <div class="p-3 col-lg-8">
     <h3 class="border-bottom pb-1">Publikus információk szerkesztése</h3>
     <edit-profile [(user)]="user" [isBackVisible]="false"></edit-profile>
   </div>
-  <div class="p-3">
-    <h3 class="border-bottom pb-1">Elérhetőségek</h3>
-    <form [formGroup]="contactForm">
-      <div class="row">
-        <div class="mb-3 col-12 col-md-6">
-          <label for="phone">Telefonszám</label>
-          <input type="tel" class="form-control" id="phone" name="phone" formControlName="phone">
+  <div class="px-2">
+    <div class="p-3">
+      <h3 class="border-bottom pb-1">Elérhetőségek</h3>
+      <form [formGroup]="contactForm">
+        <div class="row">
+          <div class="mb-3 col-12 col-md-6">
+            <label for="phone">Telefonszám</label>
+            <input type="tel" class="form-control" id="phone" name="phone" formControlName="phone">
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="mb-3 col-12 col-md-6">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" name="email" formControlName="email">
+        <div class="row">
+          <div class="mb-3 col-12 col-md-6">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" name="email" formControlName="email">
+          </div>
         </div>
-      </div>
-      <a href="/" (click)="saveContact($event)" class="btn btn-primary my-2 px-2">
-        <fa-icon *ngIf="!contactLoading" [icon]="faSave"></fa-icon>
-        <fa-icon *ngIf="contactLoading" [icon]="faSpinner" [spin]="contactLoading"></fa-icon>
-        Mentés
-      </a>
-    </form>
-  </div>
-  <div class="p-3">
-    <h3 class="border-bottom pb-1">Jelszó megváltoztatása</h3>
-    <form [formGroup]="passwordForm">
-      <div class="row">
-        <div class="mb-3 col-12 col-md-6">
-          <label for="passwordEmail">Email</label>
-          <input type="email" class="form-control" id="passwordEmail" name="passwordEmail" formControlName="passwordEmail">
+        <a href="/" (click)="saveContact($event)" class="btn btn-primary my-2 px-2">
+          <fa-icon *ngIf="!contactLoading" [icon]="faSave"></fa-icon>
+          <fa-icon *ngIf="contactLoading" [icon]="faSpinner" [spin]="contactLoading"></fa-icon>
+          Mentés
+        </a>
+      </form>
+    </div>
+    <div class="p-3">
+      <h3 class="border-bottom pb-1">Jelszó megváltoztatása</h3>
+      <form [formGroup]="passwordForm">
+        <div class="row">
+          <div class="mb-3 col-12 col-md-6">
+            <label for="passwordEmail">Email</label>
+            <input type="email" class="form-control" id="passwordEmail" name="passwordEmail" formControlName="passwordEmail">
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="mb-3 col-12 col-md-6">
-          <label for="password">Jelenlegi jelszó</label>
-          <input type="password" class="form-control" id="password" name="password" formControlName="password">
+        <div class="row">
+          <div class="mb-3 col-12 col-md-6">
+            <label for="password">Jelenlegi jelszó</label>
+            <input type="password" class="form-control" id="password" name="password" formControlName="password">
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="mb-3 col-12 col-md-6">
-          <label for="newPassword">Új jelszó</label>
-          <input type="password" class="form-control" id="newPassword" name="newPassword" formControlName="newPassword">
+        <div class="row">
+          <div class="mb-3 col-12 col-md-6">
+            <label for="newPassword">Új jelszó</label>
+            <input type="password" class="form-control" id="newPassword" name="newPassword" formControlName="newPassword">
+          </div>
         </div>
-      </div>
-      <a href="/" (click)="savePassword($event)" class="btn btn-primary my-2 px-2">
-        <fa-icon *ngIf="!passwordLoading" [icon]="faSave"></fa-icon>
-        <fa-icon *ngIf="passwordLoading" [icon]="faSpinner" [spin]="passwordLoading"></fa-icon>
-        Mentés
-      </a>
-    </form>
+        <a href="/" (click)="savePassword($event)" class="btn btn-primary my-2 px-2">
+          <fa-icon *ngIf="!passwordLoading" [icon]="faSave"></fa-icon>
+          <fa-icon *ngIf="passwordLoading" [icon]="faSpinner" [spin]="passwordLoading"></fa-icon>
+          Mentés
+        </a>
+      </form>
+    </div>
   </div>
 </div>
 <page-footer></page-footer>
