--- a/agora-angular/src/app/settings/settings.component.html
+++ b/agora-angular/src/app/settings/settings.component.html
@@ -1,6 +1,5 @@
-<!-- <div class="d-flex justify-content-center ">
-  <h1 class="m-1 mt-4 fw-bold">Beállítások</h1>
-</div> -->
+<div class="container shadow rounded p-3 col-md-11 col-lg-6 mb-4">
+  <h2 class="text-center">Beállítások</h2>
 <div class="d-flex justify-content-center">
   <div class="row m-5">
     <div [routerLink]="['profile-settings']" class="col-6 col-md-4 text-center mb-3 py-4 menu">
@@ -40,4 +39,5 @@
       <h5 class="fw-bold">Fiók törlése</h5>
     </div>
   </div>
+</div>
 </div>
