--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -15,12 +15,12 @@
         </div>
     </div>
     <div class="container d-flex flex-wrap align-items-center justify-content-center">
-        <div class="btn-group mx-2 mb-4">
-            <a href="#products" class="btn btn-primary frosted-glass">
+        <!-- <div class="btn-group mx-2 mb-4">
+            <a [routerLink]="['.']" fragment="products" class="btn btn-primary frosted-glass">
                 <fa-icon [icon]="faChevronDown"></fa-icon>
                 Ajánlatok neked
             </a>
-        </div>
+        </div> -->
     </div>
 </div>
 
