--- a/agora-angular/src/app/order-tracking/order-tracking.component.html
+++ b/agora-angular/src/app/order-tracking/order-tracking.component.html
@@ -35,9 +35,9 @@
                         <div class="progress-bar" [ngClass]="{'w-25':('Ordered' == order.status),'w-50':('Packaging' == order.status), 'w-75':('Delivery in progress' == order.status)}" role="progressbar"></div>
                     </div>
                     <div class="d-flex justify-content-end mt-4">
-                        <a (click)="orderArrived()" class="btn btn-primary">
+                        <a (click)="orderArrived(i)" class="btn btn-primary">
                             <fa-icon [icon]="faCheckCircle"></fa-icon>
-                            Rendelés megérkezett
+                            Teljes rendelés megérkezett
                         </a>
                     </div>
                     <collapse-panel [panelOpen]="true" [title]="'Termékek'" class="mx-2">
@@ -54,16 +54,23 @@
                                         class="text-decoration-none">{{product.sellerLastName}}
                                         {{product.sellerFirstName}}</a>
                                 </div>
-                                <div class="col-6 col-lg-2 mt-3">
+                                <div class="col-6 col-lg-1 mt-3">
                                     <p>{{product.amount}} db</p>
                                 </div>
                                 <div class="col-6 col-lg-2 mt-3">
-                                    <h4 class="fw-bold">{{product.price|price}}</h4>
+                                    <h4 *ngIf="!product.discount" class="fw-bold">{{product.price|price}}</h4>
+                                    <h4 *ngIf="product.discount" class="fw-bold">{{product.price * (1 - (product.discount / 100))|price}}</h4>
                                 </div>
-                                <div class="col-6 col-lg-3 mt-3 mb-2">
+                                <div class="col-6 col-lg-2 mt-3 mb-2">
                                     <span>
                                         {{product.status|state}}
                                     </span>
+                                </div>
+                                <div *ngIf="order.products.length>1" class="col-6 col-lg-2 mt-3 mb-2">
+                                    <a (click)="orderArrived(i, j)" class="btn btn-primary">
+                                        <fa-icon [icon]="faCheckCircle"></fa-icon>
+                                        Megérkezett
+                                    </a>
                                 </div>
                             </div>
                         </div>
